# evlaV

./: .gitignore  LICENSE  build.sh  cache.sh  init.sh  pyproject.toml  readme-replace.md  readme.md  rminv.sh  sync.sh
.github/workflows/: sync_mirrors.yml
src/evlav/: __main__.py  index.py  sources.py
